# shigens

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/num/: one.rs  zero.rs
src/quaternion/: funcs.rs  mod.rs  neg.rs  num.rs  ops.rs
